--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 	<br>Of course, some neighborhoods tend to reinforce the low income-high crime stereotype, with the Longwood neighborhood in the Bronx reporting an income of $24,461, and falling on the top 15 crime rates list with 1.91 crimes per 1,000 residents in December. 
 	So before you start ruling out where to live, remember to put old notions and traditional ideas aside and do your research. </br>
 	   <figure class="floatright">
-    <img src= "file:///Users/KellyC/Desktop/CraftAssign1/Income1.jpg" class="photo">
+    <img src= "https://github.com/kcaputo/Chart/blob/master/Income1.jpg?raw=true" class="photo">
     <figcaption class="caption"> 
  Top 15 NYC Crime rates per 1,000 residents in December 2015 </figcaption>
     </figure>
      <figure class="floatright">
-    <img src= "file:///Users/KellyC/Desktop/CraftAssign1/Income2.jpg" class="photo">
+    <img src= "https://github.com/kcaputo/Chart/blob/master/Income2.jpg?raw=true" class="photo">
     <figcaption class="caption"> 
   Median income of 15 NYC neighborhoods with highest crime rates</figcaption>
     </figure>
