Update and rename craftassign1.html to IncomeandCrime.html

--- a/IncomeandCrime.html
+++ b/IncomeandCrime.html
@@ -29,7 +29,7 @@
 	<body>
 
 <h1>Are Income and Crime Rates Correlated?</h1>
-<h3>By Kelly Caputo </h3>
+<h3>Kelly Caputo </h3>
 	
 <br>Looking to buy an apartment in New York? It seems like there are two big factors you want to look at before you rule out any neighborhoods. The first? Low crime rates. The second? The wealth of the neighborhood. And you might think that the neighborhoods with lower median incomes have higher crime rates. But according to the most recent New York Police Department Crime Map data, this might not necessarily be the case. Low income and high crime do not seem to go hand in hand at all.<//br>
 	<br>The highest crime rate in the city, by far, belongs to Midtown South, with a reported 13.31 crimes per 1,000 residents reported in December 2015. But the median income of the neighborhood? $81,671, which is on the higher side of New York incomes. </br>
