--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 <p>Sources: 
 https://maps.nyc.gov/crime/<br>
 http://www.psc.isr.umich.edu/dis/census/Features/tract2zip/</br></p>
-
+<br><p>
+	How was this made? Go to the README here: https://github.com/kcaputo/IncomeAndCrime/blob/gh-pages/README.md</p>
+</p>
 </body>
 </html>
